--- a/olcalc/templates/olcalc/index.html
+++ b/olcalc/templates/olcalc/index.html
@@ -15,6 +15,10 @@
     <li class="nav-item">
         <a class="nav-link" href="#">О нас</a>
     </li>
+    
+    <li class="nav-item">
+        <a class="nav-link" href="/test/">Тестовая</a>
+    </li>
 {% endblock %}
     
 {% block content %}
@@ -28,54 +32,61 @@
 
     <main role="main" class="container" style="margin-top: 100px;">
         <p class="lead">Просто введите название олимпиады и ее профиль и получите список льгот во все ВУЗы!</p>
-        <p class="lead">Вы также можете выбрать необходимые фильры, чтобы отображать только интересующие вас ВУЗы.</p>
+        <p class="lead">Вы также не можете выбрать необходимые фильры, чтобы отображать только интересующие вас ВУЗы.</p>
         <form action="" method="get">
             <div class="form-group">
                 <div class="form-group form-inline">
-                    <input type="text" class="form-control" id="olymp-1" placeholder="Название" name="olymp-name-1" list="ol-list" autocomplete="off">
-
+                    <!--<input type="text" class="form-control" id="olymp-1" placeholder="Название" name="olymp-name-1" list="ol-list" autocomplete="off">-->
+                    <select class="form-control" id="olymp-namet-1" name="olymp-name-1" style="width: 300px;">
+                       <option value="" disabled selected>Название олимпиады</option>
+                        {% for olymp in olymps %}
+                            <option>{{olymp}}</option>
+                        {% endfor %}
+                    </select>
+                    
                     <select class="form-control" id="olymp-subject-1" name="olymp-sub-1">
                         <option value="" selected disabled>Предмет</option>
-                        <option>Математика</option>
-                        <option>Физика</option>
-                        <option>Право</option>
-                        <option>Химия</option>
-                        <option>МХК</option>
+                        {% for subject in subjects %}
+                            <option>{{subject}}</option>
+                        {% endfor %}
                     </select>
                 </div>
-
-                <button type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#second-olymp" onclick="style.display='none'">Добавить олимпиаду</button>
+            <!--<button type="button" class="btn btn-secondary" data-toggle="collapse" data-target="#second-olymp" onclick="style.display='none'">Добавить олимпиаду</button>
 
                 <div id="second-olymp" class="collapse">
-                    <div class="form-group">
-                        <div class="form-group form-inline">
-                            <input type="text" class="form-control" id="olymp-2" 
-                                   placeholder="Название" name="olymp-name-2-ol" 
-                                   list="ol-list" autocomplete="off">
-                                   
-                            <select class="form-control" id="olymp-2">
-                                <option value="" selected disabled>Предмет</option>
-                                <option>Математика</option>
-                                <option>Физика</option>
-                                <option>Право</option>
-                                <option>Химия</option>
-                                <option>МХК</option>
-                            </select>
-                        </div>
-                    </div>
+                <div class="form-group form-inline">
+                --<input type="text" class="form-control" id="olymp-1" placeholder="Название" name="olymp-name-1" list="ol-list" autocomplete="off">
+                --
+                <select class="form-control" id="olymp-namet-1" name="olymp-name-1">
+                {% for olymp in olymps %}
+                <option>{{olymp}}</option>
+                {% endfor %}
+                </select>
+
+                <select class="form-control" id="olymp-subject-1" name="olymp-sub-1">
+                <option value="" selected disabled>Предмет</option>
+                {% for subject in subjects %}
+                <option>{{subject}}</option>
+                {% endfor %}
+                </select>
                 </div>
+                </div>
+            -->
             </div>
 
             <button type="submit" class="btn btn-dark" value="Input">Узнать льготы</button>
             
-            <!--List of olympiads-->
+            <!--List of olympiads
             <datalist id="ol-list">
                 <option value="Бельчонок">
                 <option value="Звезда">
                 <option value="Межвед">
                 <option value="Физтех">
             </datalist>
+            -->
         </form>
+        
+        
     </main>
 
 {% endblock %}
