--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -57,11 +57,13 @@
         {% endblock %}
         
         <footer class="my-5 pt-5 text-muted text-center text-small">
-            <p class="mb-1">© 2018-2019 AbitInfo | Все права защищены. Копирование запрещено.</p>
+            {% now "Y" as current_year %}
+            
+            <p class="mb-1">© {{ current_year }} AbitInfo | Все права защищены. Копирование запрещено.</p>
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#" class="fa fa-twitter fa-2x"></a></li>
                 <li class="list-inline-item"><a href="#" class="fa fa-vk fa-2x"></a></li>
-                <li class="list-inline-item"><a href="#" class="fa fa-github fa-2x"></a></li>
+                <li class="list-inline-item"><a href="https://github.com/AndreiNekrasOn/AbitInfo" class="fa fa-github fa-2x"></a></li>
                 <li class="list-inline-item"><a href="#" class="fa fa-envelope fa-2x"></a></li>
             </ul>
         </footer>
