--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -5,13 +5,13 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="img/favicon.ico">
     
     {% block title %}
     {% endblock %}    
     
     {%load staticfiles%}
     <link rel="stylesheet" href="{% static 'css/styles.css'%}">
+    <link rel="shortcut icon" href='{% static "img/favicon.ico" %}'>
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" 
@@ -36,14 +36,12 @@
                 <div class="container">
                     <a class="navbar-brand" href="#">AbitInfo</a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#header-links">
-                    <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse" id="header-links">
                         <ul class="navbar-nav m-auto">
-                           
                             {% block navbar_buttons %}                        
                             {% endblock %}
-
                         </ul>
                         <form class="form-inline">
                             <input class="form-control" type="text" placeholder="Поиск" aria-label="Search">
@@ -69,16 +67,12 @@
         </footer>
     </div>
 
-
-
     <!-- Optional JavaScript -->
-
-
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    
 </body>
-
 </html>
