--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -9,9 +9,12 @@
     {% block title %}
     {% endblock %}    
     
-    {%load staticfiles%}
+    {% load staticfiles %}
+    <link rel="shortcut icon" href="{%  static 'img/favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css'%}">
-    <link rel="shortcut icon" href='{% static "img/favicon.ico" %}'>
+    
+    
+    
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" 
@@ -21,10 +24,6 @@
     <!--styles for social-media icons-->
     <link rel="stylesheet" 
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <!--Select2 cdn-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 
 </head>
 
@@ -59,7 +58,10 @@
             
             <p class="mb-1">© {{ current_year }} AbitInfo | Все права защищены. Копирование запрещено.</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="https://vk.com/andreinekrason" class="fa fa-vk fa-2x"></a></li>
+                <li class="list-inline-item"><a href="#" class="fa fa-twitter fa-2x"></a></li>
+                <li class="list-inline-item"><a href="#" class="fa fa-vk fa-2x"></a></li>
+                <li class="list-inline-item"><a href="https://github.com/AndreiNekrasOn/AbitInfo" class="fa fa-github fa-2x"></a></li>
+                <li class="list-inline-item"><a href="#" class="fa fa-envelope fa-2x"></a></li>
             </ul>
         </footer>
     </div>
