--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -58,10 +58,7 @@
             
             <p class="mb-1">© {{ current_year }} AbitInfo | Все права защищены. Копирование запрещено.</p>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="#" class="fa fa-twitter fa-2x"></a></li>
-                <li class="list-inline-item"><a href="#" class="fa fa-vk fa-2x"></a></li>
-                <li class="list-inline-item"><a href="https://github.com/AndreiNekrasOn/AbitInfo" class="fa fa-github fa-2x"></a></li>
-                <li class="list-inline-item"><a href="#" class="fa fa-envelope fa-2x"></a></li>
+                <li class="list-inline-item"><a href="https://vk.com/andreinekrason" class="fa fa-vk fa-2x"></a></li>
             </ul>
         </footer>
     </div>
