Tried to fix problem with showing table of univers, no suckass

--- a/olcalc/templates/olcalc/base.html
+++ b/olcalc/templates/olcalc/base.html
@@ -33,7 +33,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
                 <div class="container">
-                    <a class="navbar-brand" href="#">AbitInfo</a>
+                    <a class="navbar-brand" href="../">AbitInfo</a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#header-links">
                         <span class="navbar-toggler-icon"></span>
                     </button>
