--- a/olcalc/templates/olcalc/index.html
+++ b/olcalc/templates/olcalc/index.html
@@ -36,18 +36,22 @@
             <div class="form-group">
                 <div class="form-group form-inline">
                     <select class="form-control" id="olymp_name" name="olymp_name" style="width: 300px;">
-                       <option value="" disabled selected>Название олимпиады</option>
+                       <option  value="" disabled selected>Название олимпиады</option>
                         {% for olymp in olymps %}
                             <option>{{olymp}}</option>
                         {% endfor %}
                     </select>
                 </div>
             </div>
-
+{{olymps}}
             <button type="submit" class="btn btn-dark" value="Search">Узнать льготы</button>
         </form>
-        
-        {% if olymp_name.title in olymps|title %} <!-- Здесь костыль, 'ab ab'.title -> 'Ab Ab' -->
+
+        {{univers}}
+
+
+
+        {% if olymp_name.title in olymps|title %}
            
             <p>Результат показан для олимпиады: <strong>{{ olymp_name }}</strong></p>
             <div class="table-responsive">
@@ -66,7 +70,6 @@
                         <tr>
                             <td>{{univer.rating}}</td>
                             <td>{{univer.title}}</td>
-                            <td>{{univer.f_title}}</td>
                             <td>{{univer.s_title}}</td>
                             <td>{{univer.privilege}}</td>
                             <td>{{univer.passing_score}}</td>
