Changed models to older version

--- a/olcalc/templates/olcalc/index.html
+++ b/olcalc/templates/olcalc/index.html
@@ -43,44 +43,35 @@
                     </select>
                 </div>
             </div>
-{{olymps}}
+
             <button type="submit" class="btn btn-dark" value="Search">Узнать льготы</button>
         </form>
 
-        {{univers}}
+        {% if olymp_name.title in olymps|title %} <!-- Здесь костыль, 'ab ab'.title -> 'Ab Ab' -->
 
-
-
-        {% if olymp_name.title in olymps|title %}
-           
             <p>Результат показан для олимпиады: <strong>{{ olymp_name }}</strong></p>
             <div class="table-responsive">
                 <table class="table" >
                     <tr class="bg-dark" style="color: aliceblue">
                         <th>#</th>
                         <th>ВУЗ</th>
-                        <th>Факультет</th>
+
                         <th>Специальность</th>
                         <th>Льгота</th>
                         <th>Проходной балл</th>
-                        <th>Военная кафедра</th>
+
 
                     </tr>
                     {% for univer in univers%}
                         <tr>
                             <td>{{univer.rating}}</td>
                             <td>{{univer.title}}</td>
+
                             <td>{{univer.s_title}}</td>
                             <td>{{univer.privilege}}</td>
                             <td>{{univer.passing_score}}</td>
 
-                            <td>
-                                {% if univer.army_cafedra %}
-                                    <p>Есть</p>
-                                {% else %}
-                                    <p>Нет</p>
-                                {% endif %}
-                            </td>
+
                         </tr>
 
 
